<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>com.onyx.app</groupId>
    <artifactId>onyx-app</artifactId>
    <version>0.0.1-SNAPSHOT</version>
    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.source>17</maven.compiler.source>
        <maven.compiler.target>17</maven.compiler.target>
    </properties>
    <dependencies>
 	
 		<!-- https://mvnrepository.com/artifact/org.kordamp.ikonli/ikonli-javafx -->
		<dependency>
		    <groupId>org.kordamp.ikonli</groupId>
		    <artifactId>ikonli-javafx</artifactId>
		    <version>12.4.0</version>
		</dependency>
		<dependency>
		    <groupId>org.kordamp.ikonli</groupId>
		    <artifactId>ikonli-core</artifactId>
		    <version>12.4.0</version>
		</dependency>
		<dependency>
    		<groupId>org.kordamp.ikonli</groupId>
    		<artifactId>ikonli-materialdesign2-pack</artifactId>
    		<version>12.4.0</version>
		</dependency>
		<dependency>
		    <groupId>org.kordamp.ikonli</groupId>
		    <artifactId>ikonli-fontawesome5-pack</artifactId>
		    <version>12.4.0</version>
		</dependency>
	    <dependency>
	        <groupId>org.openjfx</groupId>
	        <artifactId>javafx-media</artifactId>
	        <version>23.0.1</version> <!-- adapte à ta version -->
	    </dependency>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-controls</artifactId>
            <version>23.0.1</version>
        </dependency>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-fxml</artifactId>
            <version>23.0.1</version>
        </dependency>
        <!-- Jackson for JSON serialization/deserialization -->
        <dependency>
            <groupId>com.fasterxml.jackson.core</groupId>
            <artifactId>jackson-databind</artifactId>
            <version>2.17.2</version>
        </dependency>
        <dependency>
            <groupId>com.fasterxml.jackson.datatype</groupId>
            <artifactId>jackson-datatype-jsr310</artifactId>
            <version>2.17.2</version>
        </dependency>
    </dependencies>
    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.0</version>
                <configuration>
                    <release>17</release>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.openjfx</groupId>
                <artifactId>javafx-maven-plugin</artifactId>
                <version>0.0.8</version>
                <executions>
                    <execution>
						<!-- Default configuration for running -->
						<!-- Usage: mvn clean javafx:run -->
                        <id>default-cli</id>
                        <configuration>
                            <mainClass>com.onyx.app.OnyxApplication</mainClass>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
        <resources>
            <resource>
                <directory>src/main/resources</directory>
            </resource>
        </resources>
    </build>
</project>
